# AI-INTERVIEW-SYSTEM

./: .gitignore  README.md  interview_logic.py  main.py  pyproject.toml  verify_backend.py
backend/: app.py  check_api_quota.py  face_detection.py  interview_logic.py  main.py  requirements.txt  test_complete_interview.py  tts_manager.py
backend/static/: home.html  home.js  index.html  interview.html  interview.js  report.html  report.js  simple-interview.html  styles.css
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  Home.jsx  Interview.jsx  Interview_backup.jsx  Report.jsx  index.css
