[project]
name = "ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-generativeai>=0.8.0",
    "opencv-python>=4.10.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "requests>=2.32.5",
    "flask-cors>=4.0.0",
]
